--- a/package.json
+++ b/package.json
@@ -28,12 +28,13 @@
 		"@nestjs/platform-express": "^10.0.0",
 		"@nestjs/typeorm": "^10.0.2",
 		"@prisma/client": "^5.14.0",
+		"bcrypt": "^5.1.1",
 		"bcryptjs": "^2.4.3",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.1",
 		"mailgun-js": "^0.22.0",
 		"mysql": "^2.18.1",
-		"mysql2": "^3.9.8",
+		"mysql2": "^3.10.0",
 		"nodemailer": "^6.9.13",
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
