--- a/package.json
+++ b/package.json
@@ -29,10 +29,15 @@
 		"@nestjs/swagger": "^7.3.1",
 		"@nestjs/typeorm": "^10.0.2",
 		"@prisma/client": "^5.14.0",
+		"@sentry/integrations": "^7.114.0",
+		"@sentry/node": "^8.7.0",
+		"@sentry/profiling-node": "^8.7.0",
+		"@sentry/tracing": "^7.114.0",
 		"bcrypt": "^5.1.1",
 		"bcryptjs": "^2.4.3",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.1",
+		"helmet": "^7.1.0",
 		"mailgun-js": "^0.22.0",
 		"mysql": "^2.18.1",
 		"mysql2": "^3.10.0",
