--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"passport": "^0.7.0",
 		"passport-jwt": "^4.0.1",
 		"passport-local": "^1.0.0",
+		"pdfkit": "^0.15.0",
 		"reflect-metadata": "^0.2.0",
 		"rxjs": "^7.8.1",
 		"typeorm": "^0.3.20",
