--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"@nestjs/core": "^10.0.0",
 		"@nestjs/jwt": "^10.2.0",
 		"@nestjs/passport": "^10.0.3",
-		"@nestjs/platform-express": "^10.0.0",
+		"@nestjs/platform-express": "^10.3.9",
 		"@nestjs/swagger": "^7.3.1",
 		"@nestjs/typeorm": "^10.0.2",
 		"@prisma/client": "^5.14.0",
@@ -39,6 +39,7 @@
 		"class-validator": "^0.14.1",
 		"helmet": "^7.1.0",
 		"mailgun-js": "^0.22.0",
+		"multer": "^1.4.5-lts.1",
 		"mysql": "^2.18.1",
 		"mysql2": "^3.10.0",
 		"nodemailer": "^6.9.13",
@@ -55,8 +56,9 @@
 		"@nestjs/cli": "^10.0.0",
 		"@nestjs/schematics": "^10.0.0",
 		"@nestjs/testing": "^10.0.0",
-		"@types/express": "^4.17.17",
+		"@types/express": "^4.17.21",
 		"@types/jest": "^29.5.2",
+		"@types/multer": "^1.4.11",
 		"@types/node": "^20.3.1",
 		"@types/supertest": "^6.0.0",
 		"@typescript-eslint/eslint-plugin": "^6.0.0",
