--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+/home/muma/Desktop/Nestjs/e_commerce/src/images/uploads
