--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"test:e2e": "jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
+		"@nestjs-modules/ioredis": "^2.0.2",
 		"@nestjs/common": "^10.0.0",
 		"@nestjs/config": "^3.2.2",
 		"@nestjs/core": "^10.0.0",
@@ -38,6 +39,7 @@
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.1",
 		"helmet": "^7.1.0",
+		"ioredis": "^5.4.1",
 		"mailgun-js": "^0.22.0",
 		"multer": "^1.4.5-lts.1",
 		"mysql": "^2.18.1",
@@ -47,6 +49,7 @@
 		"passport-jwt": "^4.0.1",
 		"passport-local": "^1.0.0",
 		"pdfkit": "^0.15.0",
+		"redis": "^4.6.14",
 		"reflect-metadata": "^0.2.0",
 		"rxjs": "^7.8.1",
 		"typeorm": "^0.3.20",
