--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"mysql2": "^3.10.0",
 		"nodemailer": "^6.9.14",
 		"passport": "^0.7.0",
+		"passport-google-oauth20": "^2.0.0",
 		"passport-jwt": "^4.0.1",
 		"passport-local": "^1.0.0",
 		"pdfkit": "^0.15.0",
