--- a/.gitignore
+++ b/.gitignore
@@ -55,5 +55,5 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-
+my.cnf
 /home/muma/Desktop/Nestjs/e_commerce/src/images/uploads
